kanc/src/tests/sample_code/should_fail/single_file/type_check/type_mismatch/ill_typed_match_case_output_evaluates_to_well_typed_term.k
type Bool {
    false: Bool,
    true: Bool,
}

type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let identity = fun _(T: Type, t: T): T { t };

let foo = fun _(n: Nat): Nat {
    match n {
        o => identity(Bool, Nat.o),
        s(n') => identity(Bool, Nat.o),
    }
};
